[B]Version 1.1.164[/B]
- fix compatibility with Python 2