@@ -1,2 +1,3 @@
 [B]Version 1.1.164[/B]
 - fix compatibility with Python 2
+- fullxcinema - fix listing, lookup info, related videos
